# kdevelop-erlang

./: CMakeLists.txt  Messages.sh  erlang.kdev4  erlanglanguagesupport.cpp  erlanglanguagesupport.h  kdeverlangsupport.desktop  parsejob.cpp  parsejob.h
app_templates/: CMakeLists.txt
app_templates/simple_erlangapp/: Emakefile  simple_erlangapp.kdevtemplate
app_templates/simple_erlangapp/src/: %{APPNAME}_app.erl  %{APPNAME}_sup.erl
debug/: CMakeLists.txt  breakpointcontroller.cpp  breakpointcontroller.h  debug_config.ui  debug_interpreter.erl  debugger.cpp  debugger.h  debugjob.cpp  debugjob.h  debugplugin.cpp  debugplugin.h  debugsession.cpp  debugsession.h  framestackmodel.cpp  framestackmodel.h  kdeverldebug.desktop  launchconfig.cpp  launchconfig.h  messages.cpp  messages.h  variable.cpp  variable.h  variablecontroller.cpp  variablecontroller.h
debug/tests/: debuggertests.cpp  debuggertests.h
duchain/builders/: contextbuilder.cpp  contextbuilder.h  declarationbuilder.cpp  declarationbuilder.h  typebuilder.cpp  typebuilder.h
duchain/declarations/: functiondeclaration.cpp  functiondeclaration.h  variabledeclaration.cpp  variabledeclaration.h
duchain/tests/: duchain.cpp  duchain.h  duchaintestbase.cpp  duchaintestbase.h
duchain/types/: objecttype.cpp  objecttype.h
parser/: .directory  CMakeLists.txt  editorintegrator.cpp  editorintegrator.h  erlang.g  erlanglexer.cpp  erlanglexer.h  main.cpp  parserexport.h  parsesession.cpp  parsesession.h  tokenstream.h
parser/tests/: parsertest.cpp  parsertest.h
